# zephyr

boards/: CMakeLists.txt
boards/kws/fred/: Kconfig  Kconfig.defconfig  Kconfig.fred  board.yml  fred-pinctrl.dtsi  fred.dts  fred.yaml
boards/kws/pico2_spe/: Kconfig.defconfig  Kconfig.pico2_spe  board.yml  pico2_spe-pinctrl.dtsi  pico2_spe.dtsi  pico2_spe_rp2350a_m33.dts  pico2_spe_rp2350a_m33.yaml
boards/kws/pico_spe/: pico_spe.dts
boards/kws/pico_spe/doc/: index.rst
drivers/ethernet/: CMakeLists.txt  eth_lan865x.c  eth_lan865x_priv.h  oa_tc6.c
dts/bindings/: vendor-prefixes.txt
include/zephyr/drivers/: gpio.h
samples/net/dhcpv4_client/: CMakeLists.txt  prj.conf
samples/net/dhcpv4_client/src/: main.c
samples/net/pico_spe_custom/: CMakeLists.txt  prj.conf
samples/net/pico_spe_custom/src/: main.c
samples/net/spe-bridge/: CMakeLists.txt  prj.conf
samples/net/spe-bridge-1/: prj.conf
samples/net/spe-bridge-1/src/: main.c
samples/net/spe-bridge-2/: prj.conf
samples/net/spe-bridge/modules/shared_lib/: CMakeLists.txt  print_packet.c  print_packet.h  usb_forward_send.c
samples/net/spe-bridge/src/: main.c
samples/net/spe-client/: prj.conf
samples/net/spe-device-1/: prj.conf
samples/net/spe-device-echo-test/: CMakeLists.txt  prj.conf
samples/net/spe-dhcp-server-device-1/: CMakeLists.txt  prj.conf
samples/net/spe-dhcp-server-device-1/src/: main.c
samples/net/spe_usb_brdge_snp_test/: prj.conf
subsys/net/ip/: CMakeLists.txt  net_core.c  net_pkt.c  net_tc.c
usb_spe_app/app/: CMakeLists.txt  prj.conf
usb_spe_app/app/src/: main.c
(+25 files in other folders)
